--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+attrs==21.2.0
 certifi==2020.12.5
 click==7.1.2
 distlib==0.3.1
@@ -6,15 +7,22 @@ fastapi==0.65.1
 fastapi-login==1.6.0
 filelock==3.0.12
 h11==0.12.0
+iniconfig==1.1.1
+packaging==20.9
 passlib==1.7.4
 pipenv==2020.11.15
+pluggy==0.13.1
+py==1.10.0
 pydantic==1.8.2
 PyJWT==2.1.0
 pymongo==3.11.4
+pyparsing==2.4.7
+pytest==6.2.4
 python-dotenv==0.17.1
 python-multipart==0.0.5
 six==1.16.0
 starlette==0.14.2
+toml==0.10.2
 typing-extensions==3.10.0.0
 uvicorn==0.13.4
 virtualenv==20.4.6
