--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ fastapi-login==1.6.0
 filelock==3.0.12
 h11==0.12.0
 iniconfig==1.1.1
+numpy==1.20.3
 packaging==20.9
+pandas==1.2.4
 passlib==1.7.4
 pipenv==2020.11.15
 pluggy==0.13.1
@@ -18,8 +20,10 @@ PyJWT==2.1.0
 pymongo==3.11.4
 pyparsing==2.4.7
 pytest==6.2.4
+python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-multipart==0.0.5
+pytz==2021.1
 six==1.16.0
 starlette==0.14.2
 toml==0.10.2
@@ -27,3 +31,4 @@ typing-extensions==3.10.0.0
 uvicorn==0.13.4
 virtualenv==20.4.6
 virtualenv-clone==0.5.4
+xlrd==2.0.1
