--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -32,3 +32,46 @@ uvicorn==0.13.4
 virtualenv==20.4.6
 virtualenv-clone==0.5.4
 xlrd==2.0.1
+appdirs==1.4.4
+attrs==21.2.0
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+distlib==0.3.1
+et-xmlfile==1.1.0
+fastapi==0.65.1
+fastapi-login==1.6.0
+filelock==3.0.12
+h11==0.12.0
+idna==2.10
+iniconfig==1.1.1
+lxml==4.6.3
+numpy==1.20.3
+openpyxl==3.0.7
+packaging==20.9
+pandas==1.2.4
+pandas-datareader==0.9.0
+passlib==1.7.4
+pipenv==2020.11.15
+pluggy==0.13.1
+py==1.10.0
+pydantic==1.8.2
+PyJWT==2.1.0
+pymongo==3.11.4
+pyparsing==2.4.7
+pytest==6.2.4
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-multipart==0.0.5
+pytz==2021.1
+requests==2.25.1
+singleton-decorator==1.0.0
+six==1.16.0
+starlette==0.14.2
+toml==0.10.2
+typing-extensions==3.10.0.0
+urllib3==1.26.4
+uvicorn==0.13.4
+virtualenv==20.4.6
+virtualenv-clone==0.5.4
+xlrd==2.0.1
