--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ uvicorn = "0.13.4"
 openpyxl = "3.0.7"
 pandas-datareader = "0.9.0"
 toml = "0.10.2"
-xlrd = "2.0.1"
 requests = "2.25.1"
 singleton-decorator = "1.0.0"
 urllib3 = "1.26.4"
 python-multipart = "0.0.5"
+yfinance = "^0.1.63"
+xlrd = {version = "^1.2.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
