--- a/deploy/bf/bufunfa_local_env.yaml
+++ b/deploy/bf/bufunfa_local_env.yaml
@@ -35,7 +35,7 @@ services:
 
   bf-front:
     volumes:
-      - bf_front_dist_volume:/usr/share/nginx/html
+      - bf_front_dist_vol:/usr/share/nginx/html
     container_name: bufunfa-front
     build:
       dockerfile: deploy/bf/nginx.dockerfile
@@ -54,5 +54,5 @@ networks:
 volumes:
   mongo_personal_volume:
     external: true
-  bf_front_dist_volume:
+  bf_front_dist_vol:
     external: true
